# geo

./: .gitignore  CITATION.bib  CMakeLists.txt  README.md  get_ext.sh
src/: caster_gui.cpp  geo_algos.h  geo_conts.h  geo_gui.cpp  geo_gui.h  graph_algos.h  graph_conts.h  helpers.h  lines_gui.cpp  lines_gui.h  math_algos.h  math_concepts.h  math_conts.h  tree_algos.h  vis_gui.cpp  vis_gui.h  voro_gui.cpp  voro_gui.h
src/cli/: closestpair-nd.cpp  closestpair.cpp  maxsubvec.cpp  sort_by_ch.cpp
src/gui/: caster_gui.cpp  caster_gui.h  hull_gui.cpp  hull_gui.h  lines_gui.cpp  lines_gui.h  vis_gui.cpp  vis_gui.h  voro_gui.cpp  voro_gui.h
tests/: closestpair.cpp  convex.cpp  intersect.cpp  intersect2.cpp  intersect3.cpp  intersect4.cpp  maxsubvec.cpp  qhulltst.cpp  rangetree.cpp  sort_by_ch.cpp  treap.cpp  trees.cpp  tst1.cpp  tst2.cpp  tst3.cpp  unittest_intersect.cpp
